# tmac

./: .gitignore  README.md  pyproject.toml
examples/: temp.h5  tmac_on_synthetic_data.ipynb  tmac_on_synthetic_data.py
src/tmac/: fourier.py  models.py  optimization.py  preprocessing.py  probability_distributions.py  synthetic_data.py
