[project]
name = "tmac"
version = "0.1.0"
description = "Two-channel motion artifact correction"
authors = [
    { name = "Matthew S. Creamer", email = "matthew.s.creamer@gmail.com" },
]
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["numpy", "scipy", "torch"]
keywords = [
    "python",
    "calcium",
    "inference",
    "two-channel",
    "imaging",
    "motion",
    "correction",
]
license = { file = "LICENSE.md" }
urls = { homepage = "https://github.com/Nondairy-Creamer/tmac", source = "https://github.com/lycantrope/tmac" }
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
