[project]
name = "tmac"
version = "0.1.0"
description = "Two-channel motion artifact correction"
authors = [
    { name = "Matthew S. Creamer", email = "matthew.s.creamer@gmail.com" },
    { name = "Chung-Kuan CHEN", email = "b97b01045@gmail.com" },

]
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["jaxopt", "numpy"]
keywords = [
    "python",
    "calcium",
    "inference",
    "two-channel",
    "imaging",
    "motion",
    "correction",
]
license = { file = "LICENSE.md" }
urls = { homepage = "https://github.com/Nondairy-Creamer/tmac", source = "https://github.com/lycantrope/tmac" }

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project.optional-dependencies]
cpu = ["jax"]
tpu = ["jax[tpu]"]
cuda = ["jax[cuda13]"]


[dependency-groups]
dev = ["ipykernel>=7.2.0", "matplotlib>=3.10.8", "ruff>=0.15.2"]
cpu = ["jax"]

[tool.uv]
default-groups = ["dev", "cpu"]

[tool.ruff.lint]
select = ["I"]
